TaskButton has been added. It takes in the icon, click method, and enabled state as parameters for easy reuse (even though that won't be needed). The colors of the button will be updated later. TaskInputField now shows the button that will add the new task to the list and the TaskInput and TaskButton are aligned vertically. Added task data class that will be used for each task that goes in the list. It currently has task name and task completed state as properties. Implemented the TaskItem composable for the most part. It displays tasks in a way that I think looks fine. The composable takes in a task item. Renamed the preview composable. TaskItem is called in MainScreen composable right now, that is only for testing purposes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MADLab2TaskManager</string>
-    <string name="input_label">Task</string>
+    <string name="input_label">New Task</string>
+    <string name="delete_button_description">Button to delete a task</string>
 </resources>
